Changed recipe name to correct one

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -6,7 +6,7 @@
     <title>Pizza Recipe</title>
 </head>
 <body>
-    <h1>Lasagna Recipe</h1>
+    <h1>Pizza Recipe</h1>
     <img src="https://www.foodandwine.com/thmb/3kzG4PWOAgZIIfZwMBLKqoTkaGQ=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/margherita-pizza-with-argula-and-prosciutto-FT-RECIPE0721-04368ec288a84d2e997573aca0001d98.jpg">
     <h2>Mom's Secret Recipe</h2>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe molestias atque quo, quae id odio numquam expedita sunt voluptas? Reiciendis laboriosam omnis voluptatum praesentium. Aliquid qui earum cum hic? Optio!</p>
