--- a/recipes/muffin.html
+++ b/recipes/muffin.html
@@ -6,7 +6,7 @@
     <title>Muffin Recipe</title>
 </head>
 <body>
-    <h1>Lasagna Recipe</h1>
+    <h1>Muffin Recipe</h1>
     <img src="https://www.simplyrecipes.com/thmb/QctasywZgn6oh3iYFznMyJpCC4k=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/Simply-Recipes-Banana-Chocolate-Muffins-LEAD-02-995c56472a2d40cbb831ad079f645bbc.jpg">
     <h2>Mom's Secret Recipe</h2>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe molestias atque quo, quae id odio numquam expedita sunt voluptas? Reiciendis laboriosam omnis voluptatum praesentium. Aliquid qui earum cum hic? Optio!</p>
